--- a/card-style.css
+++ b/card-style.css
@@ -2,7 +2,7 @@
   box-shadow: 0px 1px 4px 0px rgba(0,0,0,.2);
   transition: .3s;
   border-radius: 5px;
-  background-color: #ffffff;
+  background-color: #daddd4;
 }
 
 .large {
@@ -15,16 +15,26 @@
   margin: 20px auto;
 }
 
+.full img {
+  height: 50px;
+  padding-right: 5px;
+}
+
 .medium {
   width: 30%;
   height: 100px;
-  padding-top: 30px;
+  padding-top: 10px;
 }
 
 .small {
   width: 15%;
   height: 100px;
+}
+
+.small p {
   text-align: center;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 .card:hover {
@@ -32,6 +42,7 @@
 }
 
 .card img {
-  width: 50%;
-  border-radius: 5px 5px 0 0;
+  /*border-radius: 50px;*/
+  padding: 20px;
+
 }
