--- a/card-style.css
+++ b/card-style.css
@@ -2,12 +2,23 @@
   box-shadow: 0px 1px 4px 0px rgba(0,0,0,.2);
   transition: .3s;
   border-radius: 5px;
-  background-color: #daddd4;
+  background-color: #ececec;
 }
 
 .large {
   width: 75%;
   margin: 20px auto;
+}
+
+.large img {
+  width: 50%;
+  height: 50%;
+  border-radius: 20px;
+}
+
+.card-container {
+  display: flex;
+  margin: 2%;
 }
 
 .full {
@@ -39,10 +50,4 @@
 
 .card:hover {
   box-shadow: 0px 3px 6px 0px rgba(0,0,0,.2);
-}
-
-.card img {
-  /*border-radius: 50px;*/
-  padding: 20px;
-
 }
