WIP: responsive design

--- a/card-style.css
+++ b/card-style.css
@@ -5,12 +5,12 @@
   background-color: #ececec;
 }
 
-.large {
+.portfolio {
   width: 75%;
   margin: 20px auto;
 }
 
-.large img {
+.portfolio img {
   width: 50%;
   height: 50%;
   border-radius: 20px;
